# OpenSeesRT

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  Conf.cmake  LICENSE.txt  README.md  conanfile.py  conanfile.txt  index.html  pyproject.toml  requirements.txt  setup.py
OTHER/: CMakeLists.txt
OTHER/AMD/: CMakeLists.txt
OTHER/ARPACK/: CMakeLists.txt  dnaup2.f
OTHER/CSPARSE/: CMakeLists.txt
OTHER/ITPACK/: CMakeLists.txt
OTHER/LAPACK/: CMakeLists.txt
OTHER/METIS/: balance.c  bucketsort.c  ccgraph.c  coarsen.c  compress.c  debug.c  estmem.c  fm.c  fortran.c  frename.c  graph.c  initpart.c  kmetis.c  kvmetis.c  kwayfm.c  kwayrefine.c  kwayvolfm.c  kwayvolrefine.c  match.c  mbalance.c  mbalance2.c  mcoarsen.c  memory.c  mesh.c  meshpart.c  metis.h  mfm.c  mfm2.c  mincover.c  minitpart.c  minitpart2.c  mkmetis.c  mkwayfmh.c  mkwayrefine.c  mmatch.c  mmd.c  mpmetis.c  mrefine.c  mrefine2.c  mutil.c  (+13 more)
OTHER/SuperLU_5.1.1/: CMakeLists.txt
OTHER/UMFPACK/: CMakeLists.txt  cholmod_blas.h
OTHER/arpack-ng/: CMakeLists.txt
SRC/: ArgumentTracker.h  CMakeLists.txt  Constants.h  Field.h  Flag.h  G3_Char.h  Hash.h  OPS_ErrorStream.h  OPS_Globals.h  Print.h  README.md  Renderer.h  State.h  TODO.md  classTags.h
SRC/actor/: CMakeLists.txt
SRC/analysis/: CMakeLists.txt
SRC/api/: CMakeLists.txt  OpenSeesFFI.h  elementAPI.h  elementAPI_Dummy.cpp  packages.cpp  runtimeAPI.h
SRC/convergenceTest/: CMakeLists.txt  CTestEnergyIncr.cpp  CTestEnergyIncr.h  CTestFixedNumIter.cpp  CTestFixedNumIter.h  CTestNormDispIncr.cpp  CTestNormDispIncr.h  CTestNormUnbalance.cpp  CTestNormUnbalance.h  CTestRelativeEnergyIncr.cpp  CTestRelativeEnergyIncr.h  CTestRelativeNormDispIncr.cpp  CTestRelativeNormDispIncr.h  CTestRelativeNormUnbalance.cpp  CTestRelativeNormUnbalance.h  CTestRelativeTotalNormDispIncr.cpp  CTestRelativeTotalNormDispIncr.h  ConvergenceTest.cpp  ConvergenceTest.h  NormDispAndUnbalance.cpp  NormDispAndUnbalance.h  NormDispOrUnbalance.cpp  NormDispOrUnbalance.h
SRC/coordTransformation/: ASDEICR.h  ASDShellQ4CorotationalTransformation.h  ASDShellQ4LocalCoordinateSystem.h  ASDShellQ4Transformation.h  CMakeLists.txt  CorotCrdTransf2d.cpp  CorotCrdTransf2d.h  CorotCrdTransf3d.cpp  CorotCrdTransf3d.h  CorotCrdTransf3d01.cpp  CorotCrdTransf3d01.h  CorotCrdTransf3d02.cpp  CorotCrdTransf3d02.h  CorotCrdTransfWarping2d.cpp  CorotCrdTransfWarping2d.h  CorotCrdTransfWarping3d.cpp  CorotCrdTransfWarping3d.h  CrdTransf.cpp  CrdTransf.h  FrameTransform.h  LinearCrdTransf2d.cpp  LinearCrdTransf2d.h  LinearCrdTransf2d02.cpp  LinearCrdTransf2d02.h  LinearCrdTransf2dInt.cpp  LinearCrdTransf2dInt.h  LinearCrdTransf3d.cpp  LinearCrdTransf3d.h  LinearCrdTransf3d02.cpp  LinearCrdTransf3d02.h  LinearShearTransf2d.cpp  LinearShearTransf2d.h  PDeltaCrdTransf2d.cpp  PDeltaCrdTransf2d.h  PDeltaCrdTransf3d.cpp  PDeltaCrdTransf3d.h  RotationLibrary.h
SRC/damage/: HystereticEnergy.h  Kratzig.h  Mehanny.cpp  Mehanny.h  ParkAng.h
SRC/database/: CMakeLists.txt  FileDatastore.cpp  NEESData.cpp  NEESData.h  OracleDatastore.cpp  main.cpp
SRC/domain/: CMakeLists.txt
SRC/element/: CMakeLists.txt  Element.cpp  Element.h  ElementalLoad.cpp  ElementalLoad.h  Information.cpp  Information.h
SRC/executable/: CMakeLists.txt  tclAppInit.cpp  tclMain.cpp
SRC/graph/: CMakeLists.txt
SRC/handler/: BinaryFileStream.cpp  BinaryFileStream.h  CMakeLists.txt  ChannelStream.cpp  ChannelStream.h  DataFileStream.cpp  DataFileStream.h  DataFileStreamAdd.cpp  DataFileStreamAdd.h  DataOutputFileHandler.cpp  DataOutputFileHandler.h  DatabaseStream.cpp  DummyStream.h  FileStream.cpp  FileStream.h  OPS_Stream.cpp  OPS_Stream.h  StandardStream.cpp  StandardStream.h  TCP_Stream.cpp  TCP_Stream.h  TestDataOutputFileHandler.cpp  XmlFileStream.cpp  XmlFileStream.h
SRC/interpolate/: CMakeLists.txt  Lagrange1D.cpp  cbdi.cpp  cbdi.h  nurbs.cpp  nurbs.h  shp3d.cpp  shp3dv.cpp  shp3dv.h  triangle.cpp
SRC/interpreter/: CMakeLists.txt  G3_Runtime.h  README.md  elementAPI_PYG3.cpp  g3_api.h
SRC/logging/: AnsiColors.h  G3_Logging.h  Logging.h  logging.cpp
SRC/material/: CMakeLists.txt  Material.cpp  Material.h  PlaneSection.h  commands.cpp  commands.h
SRC/matrix/: ASDMath.h  CMakeLists.txt  Exponential.h  ID.cpp  ID.h  Matrix.cpp  Matrix.h  Matrix3D.h  MatrixND.h  MatrixSD.h  Projector.hh  Quaternion.h  R3vectors.cpp  R3vectors.h  Rotations.hpp  SO3.h  SparseMatrix.h  TriMatrix.cpp  TriMatrix.h  Triad.h  Vector.cpp  Vector.h  Vector3D.h  VectorND.h  VectorND.tpp  Versor.h  blasdecl.h  f2c.h  identity.h  test.cpp
SRC/modelbuilder/: CMakeLists.txt  ModelBuilder.cpp  PartitionedModelBuilder.cpp  PlaneFrame.h
SRC/opensees/: __init__.py  __main__.py  _invoke.py  elements.py  helpers.py  matrices.py  openseespy.py  scripts.py  series.py  state.py  tcl.py  validation.py
SRC/parallel/: CMakeLists.txt  OpenSeesMP.cpp  OpenSeesSP.cpp
SRC/quadrature/: CMakeLists.txt  GaussLegendre1D.hpp  GaussLegendre2D.hpp  GaussNURBS.cpp  GaussNURBS.h  GaussTriangle.cpp  GaussTriangle.h  gauss.cpp  gaussQuadrature.cpp
SRC/recorder/: AlgorithmIncrements.h  CMakeLists.txt  DamageRecorder.cpp  DriftRecorder.cpp  ElementRecorder.cpp  ElementRecorderRMS.cpp  EnvelopeDriftRecorder.cpp  EnvelopeElementRecorder.cpp  EnvelopeNodeRecorder.cpp  EnvelopeNodeRecorder.h  FilePlotter.h  GSA_Recorder.cpp  GmshRecorder.cpp  MPCORecorder.cpp  MaxNodeDispRecorder.cpp  NodeRecorder.cpp  NodeRecorder.h  NodeRecorderRMS.cpp  NodeRecorderRMS.h  NormElementRecorder.cpp  NormEnvelopeElementRecorder.cpp  PVDRecorder.cpp  PatternRecorder.cpp  RemoveRecorder.cpp  VTK_Recorder.cpp  VTK_Recorder.h
SRC/reliability/: CMakeLists.txt
SRC/runtime/: CMakeLists.txt  G3_Runtime.cpp  G3_Runtime.h  InterpreterAPI.cpp  OpenSeesRT.cpp  README.md  elementAPI_PYG3.cpp  g3_api.h  tclMain.cpp
SRC/system_of_eqn/: CMakeLists.txt
SRC/tagged/: TaggedObject.h
SRC/tcl/: CMakeLists.txt
SRC/testing/: CMakeLists.txt  test_matrix.cpp
SRC/threads/: solaris2posix.h  thread_pool.hpp
SRC/utility/: CMakeLists.txt  Timer.cpp
SRC/xara/: __init__.py  exe.py  (+2 more)
(+3872 files in other folders)
